--- a/seleniumProject/test-output/old/Default suite/classes.html
+++ b/seleniumProject/test-output/old/Default suite/classes.html
@@ -4,22 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testngSamples.TableXpath</td>
+<td>excecuteClass.LoginPageTestClass</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>clientDetailsOfTom</td>
+<td>verifyUnSuccessfullLogin</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchFunctionality</td>
+<td>verifyRememberMeCheckBoxIsSelectedByDefault</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchFunctionalityByUsingClientName</td>
+<td>verifySuccessfullLoging</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>verifyTheLoginPageIsDisplayedWhileOpeningUrl</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
