--- a/seleniumProject/test-output/index.html
+++ b/seleniumProject/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Satheesh\AppData\Local\Temp\testng-eclipse--1986548265\testng-customsuite.xml</span>
+                    <span>C:\Users\Satheesh\AppData\Local\Temp\testng-eclipse-2064645423\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="testngSamples.TableXpath" class="method navigator-link" hash-for-method="clientDetailsOfTom">clientDetailsOfTom</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="excecuteClass.LoginPageTestClass" class="method navigator-link" hash-for-method="verifyRememberMeCheckBoxIsSelectedByDefault">verifyRememberMeCheckBoxIsSelectedByDefault</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="excecuteClass.LoginPageTestClass" class="method navigator-link" hash-for-method="verifySuccessfullLoging">verifySuccessfullLoging</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="excecuteClass.LoginPageTestClass" class="method navigator-link" hash-for-method="verifyTheLoginPageIsDisplayedWhileOpeningUrl">verifyTheLoginPageIsDisplayedWhileOpeningUrl</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="excecuteClass.LoginPageTestClass" class="method navigator-link" hash-for-method="verifyUnSuccessfullLogin(admin, admin123)">verifyUnSuccessfullLogin(admin, admin123)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="excecuteClass.LoginPageTestClass" class="method navigator-link" hash-for-method="verifyUnSuccessfullLogin(admin852697, admin)">verifyUnSuccessfullLogin(admin852697, admin)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="excecuteClass.LoginPageTestClass" class="method navigator-link" hash-for-method="verifyUnSuccessfullLogin(admin345, admin678)">verifyUnSuccessfullLogin(admin345, admin678)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +146,52 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testngSamples.TableXpath</span>
+              <span class="class-name">excecuteClass.LoginPageTestClass</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="clientDetailsOfTom">
-                  </a> <!-- clientDetailsOfTom -->
-                  <span class="method-name">clientDetailsOfTom</span>
+                  <a name="verifyRememberMeCheckBoxIsSelectedByDefault">
+                  </a> <!-- verifyRememberMeCheckBoxIsSelectedByDefault -->
+                  <span class="method-name">verifyRememberMeCheckBoxIsSelectedByDefault</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifySuccessfullLoging">
+                  </a> <!-- verifySuccessfullLoging -->
+                  <span class="method-name">verifySuccessfullLoging</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyTheLoginPageIsDisplayedWhileOpeningUrl">
+                  </a> <!-- verifyTheLoginPageIsDisplayedWhileOpeningUrl -->
+                  <span class="method-name">verifyTheLoginPageIsDisplayedWhileOpeningUrl</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUnSuccessfullLogin(admin, admin123)">
+                  </a> <!-- verifyUnSuccessfullLogin(admin, admin123) -->
+                  <span class="method-name">verifyUnSuccessfullLogin</span>
+                  <span class="parameters">(admin,admin123)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUnSuccessfullLogin(admin852697, admin)">
+                  </a> <!-- verifyUnSuccessfullLogin(admin852697, admin) -->
+                  <span class="method-name">verifyUnSuccessfullLogin</span>
+                  <span class="parameters">(admin852697,admin)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="verifyUnSuccessfullLogin(admin345, admin678)">
+                  </a> <!-- verifyUnSuccessfullLogin(admin345, admin678) -->
+                  <span class="method-name">verifyUnSuccessfullLogin</span>
+                  <span class="parameters">(admin345,admin678)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +199,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Satheesh\AppData\Local\Temp\testng-eclipse--1986548265\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Satheesh\AppData\Local\Temp\testng-eclipse-2064645423\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +208,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testngSamples.TableXpath&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;clientDetailsOfTom&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- testngSamples.TableXpath --&gt;
+      &lt;class name=&quot;excecuteClass.LoginPageTestClass&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,11 +248,31 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'clientDetailsOfTom')
-data.setCell(0, 2, 'testngSamples.TableXpath')
-data.setCell(0, 3, 4011);
+data.setCell(0, 1, 'verifySuccessfullLoging')
+data.setCell(0, 2, 'excecuteClass.LoginPageTestClass')
+data.setCell(0, 3, 1472);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'verifyUnSuccessfullLogin')
+data.setCell(1, 2, 'excecuteClass.LoginPageTestClass')
+data.setCell(1, 3, 864);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'verifyUnSuccessfullLogin')
+data.setCell(2, 2, 'excecuteClass.LoginPageTestClass')
+data.setCell(2, 3, 822);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'verifyUnSuccessfullLogin')
+data.setCell(3, 2, 'excecuteClass.LoginPageTestClass')
+data.setCell(3, 3, 715);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'verifyRememberMeCheckBoxIsSelectedByDefault')
+data.setCell(4, 2, 'excecuteClass.LoginPageTestClass')
+data.setCell(4, 3, 91);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'verifyTheLoginPageIsDisplayedWhileOpeningUrl')
+data.setCell(5, 2, 'excecuteClass.LoginPageTestClass')
+data.setCell(5, 3, 45);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -213,18 +292,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">testngSamples.TableXpath</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">verifySearchFunctionalityByUsingClientName</span>
-                <br/>
-                <span class="ignored-method-name">verifySearchFunctionality</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -233,18 +303,78 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testngSamples.TableXpath</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">excecuteClass.LoginPageTestClass</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">beforeMethod</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">clientDetailsOfTom</span>
-                <span class="method-start">7820 ms</span>
+                <span class="method-name">verifyRememberMeCheckBoxIsSelectedByDefault</span>
+                <span class="method-start">4904 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">afterMethod</span>
-                <span class="method-start">11838 ms</span>
+                <span class="method-start">5001 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">5242 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifySuccessfullLoging</span>
+                <span class="method-start">7343 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">8817 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">9053 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyTheLoginPageIsDisplayedWhileOpeningUrl</span>
+                <span class="method-start">11160 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">11207 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">11420 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUnSuccessfullLogin(admin, admin123)</span>
+                <span class="method-start">13621 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">14446 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">14687 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUnSuccessfullLogin(admin345, admin678)</span>
+                <span class="method-start">16594 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">17461 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">17774 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">verifyUnSuccessfullLogin(admin852697, admin)</span>
+                <span class="method-start">19888 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">20606 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
