--- a/seleniumProject/test-output/old/Default suite/methods.html
+++ b/seleniumProject/test-output/old/Default suite/methods.html
@@ -1,10 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a697e7">  <td>23/01/17 11:02:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TableXpath.afterMethod()[pri:0, instance:testngSamples.TableXpath@47eaca72]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@931675031</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/01/17 11:01:54</td>   <td>-11830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TableXpath.beforeMethod()[pri:0, instance:testngSamples.TableXpath@47eaca72]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@931675031</td>   <td></td> </tr>
-<tr bgcolor="a697e7">  <td>23/01/17 11:02:01</td>   <td>-4019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TableXpath.clientDetailsOfTom()[pri:0, instance:testngSamples.TableXpath@47eaca72]">clientDetailsOfTom</td> 
-  <td>main@931675031</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTestClass.beforeMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:53</td>   <td>2832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTestClass.afterMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:53</td>   <td>2832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTestClass.afterMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:52</td>   <td>2114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.verifyUnSuccessfullLogin(java.lang.String,java.lang.String)[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">verifyUnSuccessfullLogin</td> 
+  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:52</td>   <td>2114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.verifyUnSuccessfullLogin(java.lang.String,java.lang.String)[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">verifyUnSuccessfullLogin</td> 
+  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTestClass.beforeMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTestClass.beforeMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:52</td>   <td>2114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.verifyUnSuccessfullLogin(java.lang.String,java.lang.String)[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">verifyUnSuccessfullLogin</td> 
+  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:53</td>   <td>2832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTestClass.afterMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTestClass.beforeMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTestClass.beforeMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:53</td>   <td>2832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTestClass.afterMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:43</td>   <td>-6614</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.verifyTheLoginPageIsDisplayedWhileOpeningUrl()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">verifyTheLoginPageIsDisplayedWhileOpeningUrl</td> 
+  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:39</td>   <td>-10431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.verifySuccessfullLoging()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">verifySuccessfullLoging</td> 
+  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:37</td>   <td>-12870</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTestClass.verifyRememberMeCheckBoxIsSelectedByDefault()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">verifyRememberMeCheckBoxIsSelectedByDefault</td> 
+  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTestClass.beforeMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:53</td>   <td>2832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTestClass.afterMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
+<tr bgcolor="9f71a9">  <td>23/02/10 21:56:53</td>   <td>2832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTestClass.afterMethod()[pri:0, instance:excecuteClass.LoginPageTestClass@48f2bd5b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@111900554</td>   <td></td> </tr>
 </table>
